черновой вариант сравнения отчетов

--- a/src/main/resources/templates/clients/av.html
+++ b/src/main/resources/templates/clients/av.html
@@ -74,6 +74,10 @@
             text-align: center;
             padding: 8px;
         }
+        .highlight {
+            background-color: red; /* Замените на нужный цвет */
+            font-weight: bold;
+        }
     </style>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -284,9 +288,15 @@
                                     <td th:text="${entry.key}">Retail Chain</td>
                                     <td th:each="taskNo : ${taskNos}">
                                         <div th:each="report : ${entry.value}" th:if="${report.task_no == taskNo}">
-                                            <span th:text="${report.countRows}">0</span>,
-                                            <span th:text="${report.countCompetitorsPrice}">0</span>,
-                                            <span th:text="${report.countPromotionalPrice}">0</span>
+                                <span th:classappend="${report.highlightCountRows} ? 'highlight' : ''">
+                                    <span th:text="${report.countRows}">0</span>
+                                </span>,
+                                            <span th:classappend="${report.highlightCountCompetitorsPrice} ? 'highlight' : ''">
+                                    <span th:text="${report.countCompetitorsPrice}">0</span>
+                                </span>,
+                                            <span th:classappend="${report.highlightCountPromotionalPrice} ? 'highlight' : ''">
+                                    <span th:text="${report.countPromotionalPrice}">0</span>
+                                </span>
                                         </div>
                                     </td>
                                 </tr>
@@ -295,6 +305,9 @@
                         </div>
                     </div>
                 </div>
+
+
+
 
             </div>
 
